Added new features/updates

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -58,11 +58,11 @@
             </div>
               
 
-                <a href="/admin/user/add" 
+                <!-- <a href="/admin/user/add" 
                     class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-md shadow">
                     <i class="fa-solid fa-plus"></i>
                     Add User
-                </a>
+                </a> -->
             </div>
 
             <div class="bg-black rounded-xl shadow p-4 mt-6">
