--- a/views/user/register-success.ejs
+++ b/views/user/register-success.ejs
@@ -12,8 +12,8 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 </head>
-<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url(/images/success\ bg.png) ; font-family: 'Open Sans', sans-serif;">
-  <div class="bg-white p-10 rounded-lg shodow-lg w-full max-w-md">
+<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url(/images/pexels-matoga-27377785.jpg) ; font-family: 'Open Sans', sans-serif;">
+  <div class="bg-white p-10 shodow-lg w-full max-w-md">
     <h2 class="text-xl font-semibold text-gray-600 mb-6" style="font-family: Michroma, sans-serif;">Camverse</h2>
     <div class="w-full flex items-center justify-center py-4 px-4 text-6xl text-green-600">
       <i class="fa-regular fa-circle-check"></i>
@@ -24,7 +24,7 @@
 
 <script>
 
-  let timer = 5;
+  let timer = 10;
   const countdownEl = document.getElementById('countdown');
   
   const countdown = setInterval(() => {
