--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-100 bg-cover bg-center" style="background-image: url('/images/pexels-instawally-169789.jpg');">
   <div class="flex items-center justify-center min-h-screen">
-    <div class="bg-white rounded-lg shadow p-8 w-full max-w-md space-y-6">
+    <div class="bg-white shadow p-10 w-full max-w-md space-y-6">
+      <h2 class="text-xl font-semibold text-gray-600 mb-6" style="font-family: 'michroma';">Camverse</h2>
       <div class="pt-4">
-        <h2 class="text-3xl font-bold text-center">Admin Login</h2>
+        <h2 class="text-2xl font-bold text-center">Admin Login</h2>
       </div>
       <form method="POST" action="/admin/login" class="space-y-6">
         <% if (typeof error !== 'undefined') { %>
@@ -21,13 +24,13 @@
         <% } %>
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700"></label>
-          <input type="email" id="email" name="email" required class="mt-1 block w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter email">
+          <input type="email" id="email" name="email" required class="mt-1 block w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter email">
         </div>
         <div>
           <label for="password" class="block text-sm font-medium text-gray-700"></label>
-          <input type="password" id="password" name="password" required class="mt-1 block w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter password">
+          <input type="password" id="password" name="password" required class="mt-1 block w-full border border-gray-300 p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter password">
         </div>
-        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-900 text-white px-4 py-2 rounded">Login</button>
+        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-900 text-white font-bold px-4 py-2">Login</button>
       </form>
       <div class="h-8"></div> 
     </div>
