--- a/views/user/homepage.ejs
+++ b/views/user/homepage.ejs
@@ -32,9 +32,9 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-300">
                     Starting at <span class="text-white font-bold">₹ 59,999</span>
                 </h2>
-                <a href="#" class="border border-white text-white px-4 py-2 rounded-3xl font-medium bg-transparent hover:bg-white hover:text-black transition-duration-300">
+                <!-- <a href="#" class="border border-white text-white px-4 py-2 rounded-3xl font-medium bg-transparent hover:bg-white hover:text-black transition-duration-300">
                     Shop Now
-                </a>         
+                </a>          -->
             </div>
 
         </div>
