--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -12,7 +12,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 </head>
-<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url('/images/reg.png'); font-family: 'Open Sans', sans-serif;">
+<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url('/images/pexels-pixabay-2150.jpg'); font-family: 'Open Sans', sans-serif;">
   <div class="bg-white p-10 shodow-lg w-full max-w-md">
     <h2 class="text-xl font-semibold text-gray-600 mb-6" style="font-family: 'Michroma',sans-serif;">Camverse</h2>
     <h1 class="text-3xl font-medium mb-6" style="font-family: 'Kanit',sans-serif;">Create New Account</h1>
