--- a/views/user/reset-password-mail.ejs
+++ b/views/user/reset-password-mail.ejs
@@ -11,7 +11,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
-<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url('/images/88045_85925\ 1.png');">
+<body class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url('/images/pexels-jahoo-388415.jpg');">
     <div class="bg-white p-10 shodow-lg w-full max-w-md">
         <h2 class="text-xl font-semibold text-gray-600 mb-6" style="font-family: 'michroma';">Camverse</h2>
         <h1 class="text-2xl font-medium mb-6" style="font-family: 'Kanit',sans-serif;">Enter your Email</h1>
