your commit message

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -235,6 +235,9 @@
 .items-start {
   align-items: flex-start;
 }
+.items-stretch {
+  align-items: stretch;
+}
 .justify-around {
   justify-content: space-around;
 }
@@ -243,6 +246,9 @@
 }
 .justify-center {
   justify-content: center;
+}
+.justify-end {
+  justify-content: flex-end;
 }
 .justify-start {
   justify-content: flex-start;
@@ -295,6 +301,26 @@
 .border-b {
   border-bottom-style: var(--tw-border-style);
   border-bottom-width: 1px;
+}
+.border-l {
+  border-left-style: var(--tw-border-style);
+  border-left-width: 1px;
+}
+.border-l-1 {
+  border-left-style: var(--tw-border-style);
+  border-left-width: 1px;
+}
+.border-l-2 {
+  border-left-style: var(--tw-border-style);
+  border-left-width: 2px;
+}
+.border-l-3 {
+  border-left-style: var(--tw-border-style);
+  border-left-width: 3px;
+}
+.border-l-4 {
+  border-left-style: var(--tw-border-style);
+  border-left-width: 4px;
 }
 .border-dashed {
   --tw-border-style: dashed;
