--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -217,7 +217,7 @@
                xl1300:w-[400px] xl1300:h-[400px]
                xxl1400:w-[600px] xxl1400:h-[600px]
                xxl1500:w-[760px] xxl1500:h-[750px]
-               border rounded-lg border-gray-200 
+               border border-gray-200 
                bg-no-repeat z-50 shadow-lg mt-3">
                
       </div>
