--- a/views/user/user-account.ejs
+++ b/views/user/user-account.ejs
@@ -35,7 +35,7 @@
                 </p>
              </a>
 
-             <a href="/user/orders" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
+             <a href="/order/details" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
                 <i class="fa-solid fa-box-open text-4xl text-green-600 mb-4"></i>
                 <h2 class="font-semibold text-xl mb-2">My Orders</h2>
                 <p class="text-gray-500 text-center text-sm mb-4">
