--- a/views/user/user-address.ejs
+++ b/views/user/user-address.ejs
@@ -66,8 +66,8 @@
                 <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
                   
                   <% if (address.isDefault) { %>
-                    <span class="inline-block bg-gray-400 text-white text-xs px-2 py-1 rounded-full">
-                      Default
+                    <span class="inline-block text-white text-xs px-2 py-1 rounded-full" style="background-color: #ff5a5f;">
+                      DEFAULT
                     </span>
                   <% } %>
 
