--- a/views/user/account/checkout.ejs
+++ b/views/user/account/checkout.ejs
@@ -20,6 +20,22 @@
           Checkout
         </h1>
 
+
+        <% let selectedAddress; %>
+
+        <% if (!user.addresses || user.addresses.length === 0) { %>
+          
+        <% } else if (user.addresses.length === 1) { 
+            selectedAddress = user.addresses[0];
+        %>
+          
+        <% } else { 
+            const defaultAddress = user.addresses.find(addr => addr.isDefault);
+            selectedAddress = defaultAddress || user.addresses[0];
+        %>
+        <% } %>
+
+
         <div id="successMessage" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-60 z-40 hidden">
           <div class="bg-white p-10 rounded-lg shadow-lg w-full max-w-md">
             <h2 class="text-xl font-semibold text-gray-600 mb-6" style="font-family: Michroma, sans-serif;">Camverse</h2>
@@ -89,7 +105,7 @@
                     class="w-full border font-extralight p-2 focus:outline-none focus:ring-2 focus:ring-teal-500">
             </div>
           
-            <!-- Submit Button -->
+            
             <div class="pt-4 text-center">
               <button id="submitButton" type="submit"
                       class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2">
@@ -105,7 +121,7 @@
         </div>
 
 
-        <!-- Change Address Modal -->
+        
         <div id="changeAddressModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
           <div class="bg-white shadow-lg p-9 w-full max-w-md relative">
 
@@ -180,7 +196,7 @@
                 <% } else if (user.addresses.length === 1) { 
                      const address = user.addresses[0]; 
                 %>
-                  <div class="flex flex-col md:flex-row items-start justify-between gap-4 pb-4">
+                  <div class="flex flex-col md:flex-row items-start justify-between gap-4 pb-4 font-extralight">
                     <div>
                       <p class="font-bold mb-1"> Delivering to <%= address.fullName %></p>
                       <p class="text-gray-600 text-sm">
@@ -217,7 +233,7 @@
                      const defaultAddress = user.addresses.find(addr => addr.isDefault);
                      const useAddress = defaultAddress || user.addresses[0];
                 %>
-                  <div class="flex flex-col md:flex-row items-start justify-between gap-4 pb-4">
+                  <div class="flex flex-col md:flex-row items-start justify-between gap-4 pb-4 font-extralight">
                     <div>
                       <p class="font-bold mb-1">Delivering to <%= useAddress.fullName %></p>
                       <p class="text-gray-600 text-sm">
@@ -285,45 +301,54 @@
             </div>
         
             
-            <div class="bg-white shadow p-6 h-fit">
+            <div class="bg-white shadow p-6 h-fit font-extralight">
               <h2 class="text-xl font-semibold text-gray-800 mb-4">Payment Summary <span class="font-extralight">(<%= totalQuantity %> Items)</span></h2>
               <% if(cart && cart.items.length > 0) { %>
-                  <div class="flex justify-between text-gray-600 mb-2">
-                  <span>Subtotal</span>
-                  <span>₹<%= total.toLocaleString() %>.00</span>
-                  </div>
-                  <div class="flex justify-between text-gray-600 mb-2">
+                <div class="flex justify-between text-gray-600 mb-2">
+                  <span>Total MRP</span>
+                  <span>₹<%= totalMRP.toLocaleString() %></span>
+                </div>          
+                <div class="flex justify-between text-gray-600 mb-2">
+                  <span>Total Discount</span>
+                  <span class="text-green-600">- ₹<%= totalDiscount.toLocaleString() %></span>
+                </div>
+                <div class="flex justify-between text-gray-600 mb-2">
                   <span>Shipping</span>
                   <span>Free</span>
-                  </div>
-                  <hr class="my-3">
-                  <div class="flex justify-between font-bold text-gray-800 text-lg mb-6">
+                </div>
+                <hr class="my-3">
+                <div class="flex justify-between font-bold text-gray-800 text-lg mb-6">
                   <span>Total</span>
                   <span>₹<%= total.toLocaleString() %>.00</span>
-                  </div>
+                </div>
+
                     
+                  <form action="/order" method="POST">
+                    <input type="hidden" name="addressId" value="<%= selectedAddress._id %>">
                     <div class="mb-6">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-3">Payment Method</h3>
-                        <div class="space-y-2">
+                      <h3 class="text-lg font-semibold text-gray-700 mb-3">Payment Method</h3>
+                      <div class="space-y-2">
                         <label class="flex items-center space-x-2 cursor-pointer">
-                            <input type="radio" name="payment" value="cod" checked>
+                          <input type="radio" name="payment" value="COD" checked>
+                          <span>Cash on Delivery</span>
+                        </label>
+                        <label class="flex items-center space-x-2 cursor-pointer">
+                            <input type="radio" name="payment" value="online">
                             <span>Pay Online(Razorpay)</span>
                         </label>
                         <label class="flex items-center space-x-2 cursor-pointer">
-                            <input type="radio" name="payment" value="card">
+                            <input type="radio" name="payment" value="wallet">
                             <span>Wallet</span>
                         </label>
-                        <label class="flex items-center space-x-2 cursor-pointer">
-                            <input type="radio" name="payment" value="upi">
-                            <span>Cash on Delivery</span>
-                        </label>
-                        </div>
+                      </div>
                     </div>
-  
-                  <a href="/checkout" 
-                  class="block text-center bg-teal-600 text-white font-normal py-2 hover:bg-teal-700">
-                  Place Order
-                  </a>
+
+                    <button type="submit" 
+                      class="block w-full text-center bg-teal-600 text-white font-normal py-2 hover:bg-teal-700">
+                      Place Order
+                    </button>
+
+                  </form>
               <% } %>
             </div>
         </div>
